import java.util.ArrayList;

public class User {
    String userName;
    String password;
    ArrayList<Media> haveWatched;
    ArrayList<Media> saveForLater;

    public User(String userName, String password) {
        this.userName = userName;
        this.password = password;
    }


    public void logIn() {


    }

    public void createUser() {


    }
}