@startuml
'https://plantuml.com/class-diagram
!pragma layout smetana

class Streamingplatform{
    + public static void main (String [] args)

}

class User{
-userName
-password
    - ArrayList <Media> haveWatched
    - ArrayList <Media> saveForLater

    + login()
    + createUser()
}

class Movie{
    - FileIO
    - int releaseYear
}

class Series{
    - FileIO
    - String releaseYear
    - int season
    - int episode
}

class Startmenu{
 - TextUI
 - startProgram()
}

class Mainmenu{
+ search()
+ showCategory()
+ viewWatched()
+ viewSaved()
+ playChoice()


}


interface Media{
    - String title
    - ArrayList <Category> categories
    - float rating
    + create()
    + addToWatched()
    + addToSaved()
    + deleteFromSaved()
    + deleteFrom

}

class FileIO{
+ ArrayList<String> readMediaData(String path)
+ void saveData(ArrayList<Media> media, String path)
+ String[] readMediaData(String path, int length)
}

class TextUI{
- Scanner scanner
+ void displayMsg(String s)
+ int promptNumeric(String msg)
+ String promptText(String msg)
+ int promptChoice(String msg, ArrayList<String> list)
+ boolean promptBinary(String msg )
}

Mainmenu *-- User
Startmenu *-- User
Series <|-- Media
Movie <|-- Media
Streamingplatform *-- TextUI
Streamingplatform *-- FileIO
Startmenu *-- Mainmenu
Streamingplatform *-- Startmenu
Mainmenu *-- Movie
Mainmenu *-- Series




@enduml